# storeyourgames

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml
src/: implementation.rs  main.rs  scrapper.rs
