[package]
name = "storeyourgames"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rectangle-pack = "*"
image = "*"
imageproc = "*"
boardgamegeek = "*"
reqwest = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
